乱数を改善(WIP)

--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -147,30 +147,146 @@ bool equals( float x, float y ) {
 
 //
 // Random
+// https://www.shadertoy.com/view/4djSRW
 //
-float hash( float x ) {
-    return fract( sin( x ) * 43758.5453123 );
+
+// Hash without Sine
+// Creative Commons Attribution-ShareAlike 4.0 International Public License
+// Created by David Hoskins.
+
+// https://www.shadertoy.com/view/4djSRW
+// Trying to find a Hash function that is the same on ALL systens
+// and doesn't rely on trigonometry functions that change accuracy 
+// depending on GPU. 
+// New one on the left, sine function on the right.
+// It appears to be the same speed, but I suppose that depends.
+
+// * Note. It still goes wrong eventually!
+// * Try full-screen paused to see details.
+
+// *** Change these to suit your range of random numbers..
+
+// *** Use this for integer stepped ranges, ie Value-Noise/Perlin noise functions.
+#define HASHSCALE1 .1031
+#define HASHSCALE3 vec3(.1031, .1030, .0973)
+#define HASHSCALE4 vec4(1031, .1030, .0973, .1099)
+
+// For smaller input rangers like audio tick or 0-1 UVs use these...
+//#define HASHSCALE3 443.8975
+//#define HASHSCALE3 vec3(443.897, 441.423, 437.195)
+//#define HASHSCALE3 vec3(443.897, 441.423, 437.195, 444.129)
+
+
+
+//  1 out, 1 in...
+float hash11(float p)
+{
+	vec3 p3  = fract(vec3(p) * HASHSCALE1);
+    p3 += dot(p3, p3.yzx + 19.19);
+    return fract((p3.x + p3.y) * p3.z);
 }
 
-vec4 state;
-float GPURnd() {
-	const vec4 q = vec4(   1225.0,    1585.0,    2457.0,    2098.0);
-	const vec4 r = vec4(   1112.0,     367.0,      92.0,     265.0);
-	const vec4 a = vec4(   3423.0,    2646.0,    1707.0,    1999.0);
-	const vec4 m = vec4(4194287.0, 4194277.0, 4194191.0, 4194167.0);
-
-	vec4 beta = floor(state / q);
-	vec4 p = a * (state - beta * q) - beta * r;
-	beta = (sign(-p) + vec4(1.0)) * vec4(0.5) * m;
-	state = (p + beta);
-
-	return fract(dot(state / m, vec4(1.0, -1.0, 1.0, -1.0)));
+//  1 out, 2 in...
+float hash12(vec2 p)
+{
+	vec3 p3  = fract(vec3(p.xyx) * HASHSCALE1);
+    p3 += dot(p3, p3.yzx + 19.19);
+    return fract((p3.x + p3.y) * p3.z);
 }
 
-vec2 Hammersley( float seed ) {
-	float u = hash( 78.233 + seed );
-	float v = hash( 10.873 + seed );
-	return vec2( u, v );
+//  1 out, 3 in...
+float hash13(vec3 p3)
+{
+	p3  = fract(p3 * HASHSCALE1);
+    p3 += dot(p3, p3.yzx + 19.19);
+    return fract((p3.x + p3.y) * p3.z);
+}
+
+//  2 out, 1 in...
+vec2 hash21(float p)
+{
+	vec3 p3 = fract(vec3(p) * HASHSCALE3);
+	p3 += dot(p3, p3.yzx + 19.19);
+    return fract((p3.xx+p3.yz)*p3.zy);
+
+}
+
+///  2 out, 2 in...
+vec2 hash22(vec2 p)
+{
+	vec3 p3 = fract(vec3(p.xyx) * HASHSCALE3);
+    p3 += dot(p3, p3.yzx+19.19);
+    return fract((p3.xx+p3.yz)*p3.zy);
+
+}
+
+///  2 out, 3 in...
+vec2 hash23(vec3 p3)
+{
+	p3 = fract(p3 * HASHSCALE3);
+    p3 += dot(p3, p3.yzx+19.19);
+    return fract((p3.xx+p3.yz)*p3.zy);
+}
+
+//  3 out, 1 in...
+vec3 hash31(float p)
+{
+   vec3 p3 = fract(vec3(p) * HASHSCALE3);
+   p3 += dot(p3, p3.yzx+19.19);
+   return fract((p3.xxy+p3.yzz)*p3.zyx); 
+}
+
+
+///  3 out, 2 in...
+vec3 hash32(vec2 p)
+{
+	vec3 p3 = fract(vec3(p.xyx) * HASHSCALE3);
+    p3 += dot(p3, p3.yxz+19.19);
+    return fract((p3.xxy+p3.yzz)*p3.zyx);
+}
+
+///  3 out, 3 in...
+vec3 hash33(vec3 p3)
+{
+	p3 = fract(p3 * HASHSCALE3);
+    p3 += dot(p3, p3.yxz+19.19);
+    return fract((p3.xxy + p3.yxx)*p3.zyx);
+
+}
+
+// 4 out, 1 in...
+vec4 hash41(float p)
+{
+	vec4 p4 = fract(vec4(p) * HASHSCALE4);
+    p4 += dot(p4, p4.wzxy+19.19);
+    return fract((p4.xxyz+p4.yzzw)*p4.zywx);
+    
+}
+
+// 4 out, 2 in...
+vec4 hash42(vec2 p)
+{
+	vec4 p4 = fract(vec4(p.xyxy) * HASHSCALE4);
+    p4 += dot(p4, p4.wzxy+19.19);
+    return fract((p4.xxyz+p4.yzzw)*p4.zywx);
+
+}
+
+// 4 out, 3 in...
+vec4 hash43(vec3 p)
+{
+	vec4 p4 = fract(vec4(p.xyzx)  * HASHSCALE4);
+    p4 += dot(p4, p4.wzxy+19.19);
+    return fract((p4.xxyz+p4.yzzw)*p4.zywx);
+}
+
+// 4 out, 4 in...
+vec4 hash44(vec4 p4)
+{
+	p4 = fract(p4  * HASHSCALE4);
+    p4 += dot(p4, p4.wzxy+19.19);
+    return fract((p4.xxyz+p4.yzzw)*p4.zywx);
+    //return fract(vec4((p4.x + p4.y)*p4.z, (p4.x + p4.z)*p4.y, (p4.y + p4.z)*p4.w, (p4.z + p4.w)*p4.x));
 }
 
 //
@@ -432,8 +548,8 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce, f
 	intersection.distance = INF;
 	intersectScene( intersection, ray );
 
-	float seed = 76.2 + 73.1 * float( bounce ) + sa + 17.7 * float( frame );
-	vec2 Xi = Hammersley( seed );
+	float seed = 23.1 * sa + 73.1 * float( bounce ) + 17.7 * float( frame );
+	vec2 Xi = hash21( seed );
 	ray.origin = intersection.position + OFFSET * intersection.normal;
 
 	if ( intersection.hit ) {
@@ -498,7 +614,7 @@ void main( void ) {
 	vec4 prevColor = texture2D( buffer, uv );
 
 	// sa
-	float sa = hash( dot( gl_FragCoord.xy, vec2(12.9898, 78.233) ) + 1113.1*float(frame) );
+	float sa = hash13( vec3( gl_FragCoord.xy, float( frame ) ) );
 
 	// fragment position
 	vec2 fragPos = ( gl_FragCoord.xy * 2.0 - resolution ) / resolution;
@@ -508,12 +624,6 @@ void main( void ) {
 	Ray ray;
 	ray.origin = cameraPosition;
 	ray.direction = normalize( rayTip.xyz );
-
-	//// init state for GPURnd
-	//state.x = hash(uv.x);
-	//state.y = hash(uv.y + state.x);
-	//state.z = hash(state.x + state.y);
-	//state.w = hash(time + dot(state.xyz, vec3(1.0)));
 
 	// bounce
 	Intersection intersection;
