--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -48,7 +48,7 @@ void main(void) {
 }
 </script>
 
-<script id="float_fragment_shader" type="x-shader/x-fragment">
+<script id="float_fragment_shader_p1" type="x-shader/x-fragment">
 precision highp float;
 
 //
@@ -464,14 +464,85 @@ void intersectAABB( inout Intersection intersection, Ray ray, AABB aabb ){
 		}
 	}
 }
-
+/*
 void intersectScene( inout Intersection intersection, inout Ray ray ) {
-	AABB aabb;
-	Material distanceMaterial;
-	Sphere sphere;
-	#include <pathtracing_intersect_scene_internal>
-}
+	Plane plane;
+	plane.material.type = MATERIAL_TYPE_DIFFUSE;
+	plane.material.color = vec3( 0.9 );
+	plane.material.emission = vec3( 0.0 );
+	plane.position = vec3( 0.0, 0.0, 0.0 );
+	plane.normal = vec3( 0.0, 1.0, 0.0 );
+	//intersectPlane( intersection, ray, plane );
 
+	AABB aabb;
+	aabb.material.type = MATERIAL_TYPE_GGX;
+	aabb.material.color = vec3( 0.9 );
+	aabb.material.emission = vec3( 0.0 );
+	aabb.lb = vec3( -5.0, -0.1, -5.0 );
+	aabb.rt = vec3( 5.0, 0.0, 5.0 );
+	intersectAABB( intersection, ray, aabb );
+
+	aabb.material.type = MATERIAL_TYPE_GGX_REFRACTION;
+	aabb.lb = vec3( -4.0, 0.0, -4.0 );
+	aabb.rt = vec3( -3.0, 1.0, -3.0 );
+	intersectAABB( intersection, ray, aabb );
+
+	Material distanceMaterial;
+	distanceMaterial.type = MATERIAL_TYPE_DIFFUSE;
+	distanceMaterial.color = vec3( 0.4, 0.4, 0.8 );
+	distanceMaterial.emission = vec3( 0.0 );
+	intersectDistanceFucntion( intersection, ray, distanceMaterial );
+
+	Sphere sphere;
+	sphere.material.emission = vec3( 0.0 );
+
+	sphere.material.type = MATERIAL_TYPE_DIFFUSE;
+	sphere.material.color = vec3( 0.8, 0.4, 0.4 );
+	sphere.position = vec3( 0.0, 1.0, 1.0 );
+	sphere.radius = 1.0;
+	intersectSphere( intersection, ray, sphere );
+
+	sphere.material.type = MATERIAL_TYPE_REFRACTION;
+	sphere.material.color = vec3( 1.0, 1.0, 1.0 );
+	sphere.position = vec3( 2.0, 0.7, 3.0 );
+	sphere.radius = 0.7;
+	intersectSphere( intersection, ray, sphere );
+
+	sphere.material.type = MATERIAL_TYPE_GGX_REFRACTION;
+	sphere.material.color = vec3( 1.0, 1.0, 1.0 );
+	sphere.position = vec3( -2.0, 0.7, 3.0 );
+	sphere.radius = 0.7;
+	intersectSphere( intersection, ray, sphere );
+
+	sphere.material.type = MATERIAL_TYPE_DIFFUSE;
+	sphere.material.color = vec3( 0.5, 0.25, 0.3 );
+	sphere.position = vec3( -2.0, 0.7, 3.0 );
+	sphere.radius = 0.2;
+	intersectSphere( intersection, ray, sphere );
+
+	sphere.material.type = MATERIAL_TYPE_SPECULAR;
+	sphere.material.color = vec3( 1.0, 1.0, 1.0 );
+	sphere.position = vec3( 3.0, 0.7, -3.0 );
+	sphere.radius = 0.7;
+	intersectSphere( intersection, ray, sphere );
+
+	sphere.material.type = MATERIAL_TYPE_GGX;
+	sphere.material.color = vec3( 1.0, 1.0, 1.0 );
+	sphere.position = vec3( -3.0, 0.7, -1.0 );
+	sphere.radius = 0.7;
+	intersectSphere( intersection, ray, sphere );
+
+	sphere.material.type = MATERIAL_TYPE_DIFFUSE;
+	sphere.material.color = vec3( 0.0 );
+	sphere.material.emission = vec3( 20.0 );
+	sphere.position = vec3( 0.0, 5.0, 0.0 );
+	sphere.radius = 1.0;
+	//intersectSphere( intersection, ray, sphere );
+}
+*/
+</script>
+
+<script id="float_fragment_shader_p2" type="x-shader/x-fragment">
 void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) {
 	intersection.hit = false;
 	intersection.distance = INF;
@@ -700,7 +771,6 @@ function createDynamicObjects() {
 	writeBuffer = readBuffer.clone();
 
 	// float quad
-	editor.updateIntersectSceneInternal();
 	floatQuad = createQuadScene( {
 		uniforms: {
 			resolution: { type: 'v2', value: new THREE.Vector2( canvas.width, canvas.height ) },
@@ -716,7 +786,7 @@ function createDynamicObjects() {
 			cameraFar:  { type: 'f', value: camera.far },
 		},
 		vertexShader: document.getElementById( 'vertex_shader' ).textContent,
-		fragmentShader: document.getElementById( 'float_fragment_shader' ).textContent,
+		fragmentShader: editor.createFragmentShader(),
 	} );
 }
 
