--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -62,6 +62,12 @@ uniform vec2 resolution;
 // cubeMap
 uniform samplerCube cubeMap;
 
+// texture
+uniform sampler2D texture01;
+uniform sampler2D texture02;
+uniform sampler2D texture03;
+uniform sampler2D texture04;
+
 // camera
 uniform vec3 cameraPosition;
 uniform mat4 viewMatrix;
@@ -101,6 +107,8 @@ struct Material {
 	vec3 emission;
 	float roughness;
 	float refractiveIndex;
+
+	int emissionTexture;
 };
 #define MATERIAL_TYPE_DIFFUSE 0
 #define MATERIAL_TYPE_SPECULAR 1
@@ -116,6 +124,7 @@ struct Intersection {
 	vec3 position;
 	float distance;
 	vec3 normal;
+	vec2 uv;
 	Material material;
 };
 
@@ -421,6 +430,8 @@ void intersectSphere( inout Intersection intersection, Ray ray, Sphere sphere ){
 		intersection.normal = normalize( intersection.position - sphere.position );
 		intersection.distance = t;
 		intersection.material = sphere.material;
+		intersection.uv.y = acos( intersection.normal.z ) / PI;
+		intersection.uv.x = 0.5 + sign( intersection.normal.y ) * acos( intersection.normal.x / length( intersection.normal.xy ) ) / PI2;
 	}
 }
 
@@ -447,20 +458,29 @@ void intersectAABB( inout Intersection intersection, Ray ray, AABB aabb ){
 		intersection.distance = tmin;
 		intersection.material = aabb.material;
 
+		vec3 uvw = ( intersection.position - aabb.lb ) / ( aabb.rt - aabb.lb );
+		//intersection.uv = vec2( uvw.x, uvw.z );
+
 		// 交点座標から法線を求める
 		// 高速化のためにY軸から先に判定する
 		if( equals( intersection.position.y, aabb.rt.y ) ) {
 			intersection.normal = vec3( 0.0, 1.0, 0.0 );
+			intersection.uv = uvw.xz;
 		} else if( equals( intersection.position.y, aabb.lb.y ) ) {
 			intersection.normal = vec3( 0.0, -1.0, 0.0 );
+			intersection.uv = uvw.xz;
 		} else if( equals( intersection.position.x, aabb.lb.x ) ) {
 			intersection.normal = vec3( -1.0, 0.0, 0.0 );
+			intersection.uv = uvw.zy;
 		} else if( equals( intersection.position.x, aabb.rt.x ) ) {
 			intersection.normal = vec3( 1.0, 0.0, 0.0 );
+			intersection.uv = uvw.zy;
 		} else if( equals( intersection.position.z, aabb.lb.z ) ) {
 			intersection.normal = vec3( 0.0, 0.0, -1.0 );
+			intersection.uv = uvw.xy;
 		} else if( equals( intersection.position.z, aabb.rt.z ) ) {
 			intersection.normal = vec3( 0.0, 0.0, 1.0 );
+			intersection.uv = uvw.xy;
 		}
 	}
 }
@@ -571,7 +591,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 		} else if ( intersection.material.type == MATERIAL_TYPE_GGX ) {
 			vec3 N = intersection.normal;
 			vec3 V = -ray.direction;
-			vec3 H = importanceSampleGGX( Xi, intersection.material.roughness, N );
+			vec3 H = importanceSampleGGX( Xi, intersection.material.roughness * texture2D( texture03, intersection.uv ).r , N );
 			vec3 L = reflect( ray.direction, H );
 			//vec3 L = 2.0 * dot( V, H ) * H - V;
 
@@ -581,7 +601,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 			float VoH = saturate( dot( V, H ) );// x x
 
 			if( NoL > 0.0 ) {
-				float G = GGX_G( intersection.material.roughness, NoV, NoL );
+				float G = GGX_G( intersection.material.roughness * texture2D( texture03, intersection.uv ).r, NoV, NoL );
 				float Fc = pow( 1.0 - VoH, 5.0 );
 				vec3 F = (1.0 - Fc) * SpecularColor + Fc;
 				intersection.material.color *= F * G * VoH / ( NoH * NoV );
@@ -589,7 +609,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 
 			ray.direction = L;
 		} else if ( intersection.material.type == MATERIAL_TYPE_GGX_REFRACTION ) {
-			vec3 H = importanceSampleGGX( Xi, intersection.material.roughness, intersection.normal );
+			vec3 H = importanceSampleGGX( Xi, intersection.material.roughness * texture2D( texture03, intersection.uv ).r, intersection.normal );
 
 			vec3 rayDirection = ray.direction;
 			bool isIncoming = dot( rayDirection, intersection.normal ) < 0.0;
@@ -627,7 +647,7 @@ void main( void ) {
 	vec3 color = vec3( 1.0 );
 	for ( int bounce = 0; bounce <= BOUNCE_LIMIT; bounce++ ) {
 		calcRadiance( intersection, ray, bounce );
-		color *= intersection.material.emission + intersection.material.color;
+		color *= intersection.material.emission * texture2D( texture04, intersection.uv ).rgb + intersection.material.color;
 		if ( !intersection.hit ) break;
 
 		// 光源に到達しないケースなら明るさは0
@@ -667,7 +687,7 @@ void main(void) {
 var container, stats;
 var camera, renderer;
 var orbitControls, prevCameraMatrixWorld;
-var textureCubes;
+var textureCubes, texture2Ds;
 var renderQuad, floatQuad, initTexture, readBuffer, writeBuffer;
 var frame = 0;
 var editor;
@@ -778,6 +798,10 @@ function createDynamicObjects() {
 			frame: { type: 'i', value: frame },
 			buffer: { type: 't', value: readBuffer.texture },
 			cubeMap: { type: 'tc', value: textureCubes[config.envmap] },
+			texture01: { type: 't', value: texture2Ds.gam0022 },
+			texture02: { type: 't', value: texture2Ds.gam0022_inverse },
+			texture03: { type: 't', value: texture2Ds.earth },
+			texture04: { type: 't', value: texture2Ds.earth_inverse },
 
 			cameraWorldMatrix: { type: 'm4', value: camera.matrixWorld },
 			cameraProjectionMatrixInverse: { type: 'm4', value: new THREE.Matrix4().getInverse( camera.projectionMatrix ) },
@@ -817,6 +841,23 @@ function initTextureCube() {
 	textureCube.mapping = THREE.CubeReflectionMapping;
 	textureCubes.pisa = textureCube;
 	textureCubes.generateMipmaps = false;
+}
+
+function initTexture2D() {
+	var loader = new THREE.TextureLoader();
+	texture2Ds = {};
+
+	var createRepeatTexture = function( url ) {
+		var texture = loader.load( url );
+		texture.wrapS = THREE.RepeatWrapping;
+		texture.wrapT = THREE.RepeatWrapping;
+		return texture;
+	}
+
+	texture2Ds.gam0022         = createRepeatTexture( "textures/gam0022_512.png" );
+	texture2Ds.gam0022_inverse = createRepeatTexture( "textures/gam0022_inverse_512.png" );
+	texture2Ds.earth           = createRepeatTexture( "textures/earth_2048.jpg" );
+	texture2Ds.earth_inverse   = createRepeatTexture( "textures/earth_inverse_2048.jpg" );
 }
 
 function initGUI() {
@@ -921,6 +962,7 @@ function init() {
 
 
 	initTextureCube();
+	initTexture2D();
 
 	// RenderQuad
 	renderQuad = createQuadScene( {
