--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -67,6 +67,7 @@ uniform sampler2D texture01;
 uniform sampler2D texture02;
 uniform sampler2D texture03;
 uniform sampler2D texture04;
+uniform sampler2D texture05;
 
 // camera
 uniform vec3 cameraPosition;
@@ -86,7 +87,7 @@ const float PI = 3.14159265359;
 const float PI2 = 6.28318530718;
 const vec3 backgroundColor = vec3( 1.0 );
 const vec3 SpecularColor = vec3( 1.0 );
-const int BOUNCE_LIMIT = 10;
+const int BOUNCE_LIMIT = 20;
 
 // HLSL
 float saturate( float x ) {
@@ -108,13 +109,31 @@ struct Material {
 	float roughness;
 	float refractiveIndex;
 
+	int colorTexture;
 	int emissionTexture;
+	int roughnessTexture;
 };
 #define MATERIAL_TYPE_DIFFUSE 0
 #define MATERIAL_TYPE_SPECULAR 1
 #define MATERIAL_TYPE_REFRACTION 2
 #define MATERIAL_TYPE_GGX 3
 #define MATERIAL_TYPE_GGX_REFRACTION  4
+
+vec3 fetchTextureMaterial( int texture, vec2 uv ) {
+	if ( texture == 0 ) {
+		return vec3( 1.0 );
+	} else if ( texture == 1 ) {
+		return texture2D( texture01, uv ).rgb;
+	} else if ( texture == 2 ) {
+		return texture2D( texture02, uv ).rgb;
+	} else if ( texture == 3 ) {
+		return texture2D( texture03, uv ).rgb;
+	} else if ( texture == 4 ) {
+		return texture2D( texture04, uv ).rgb;
+	} else if ( texture == 5 ) {
+		return texture2D( texture05, uv ).rgb;
+	}
+}
 
 //
 // Primitive
@@ -566,6 +585,7 @@ void intersectScene( inout Intersection intersection, inout Ray ray ) {
 void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) {
 	intersection.hit = false;
 	intersection.distance = INF;
+	intersection.material.colorTexture = 0;
 	intersectScene( intersection, ray );
 
 	vec3 seed = vec3( gl_FragCoord.xy, float( frame ) * 0.3 ) + float( bounce ) * 500.0 + 50.0;
@@ -573,6 +593,8 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 	ray.origin = intersection.position + OFFSET * intersection.normal;
 
 	if ( intersection.hit ) {
+		float roughness = intersection.material.roughness * fetchTextureMaterial( intersection.material.roughnessTexture, intersection.uv ).r;
+
 		if ( intersection.material.type == MATERIAL_TYPE_DIFFUSE ) {
 			ray.direction = cosineDirection( Xi, intersection.normal);
 		} else if ( intersection.material.type == MATERIAL_TYPE_SPECULAR ) {
@@ -591,7 +613,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 		} else if ( intersection.material.type == MATERIAL_TYPE_GGX ) {
 			vec3 N = intersection.normal;
 			vec3 V = -ray.direction;
-			vec3 H = importanceSampleGGX( Xi, intersection.material.roughness * texture2D( texture03, intersection.uv ).r , N );
+			vec3 H = importanceSampleGGX( Xi, roughness, N );
 			vec3 L = reflect( ray.direction, H );
 			//vec3 L = 2.0 * dot( V, H ) * H - V;
 
@@ -601,7 +623,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 			float VoH = saturate( dot( V, H ) );// x x
 
 			if( NoL > 0.0 ) {
-				float G = GGX_G( intersection.material.roughness * texture2D( texture03, intersection.uv ).r, NoV, NoL );
+				float G = GGX_G( roughness, NoV, NoL );
 				float Fc = pow( 1.0 - VoH, 5.0 );
 				vec3 F = (1.0 - Fc) * SpecularColor + Fc;
 				intersection.material.color *= F * G * VoH / ( NoH * NoV );
@@ -609,7 +631,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 
 			ray.direction = L;
 		} else if ( intersection.material.type == MATERIAL_TYPE_GGX_REFRACTION ) {
-			vec3 H = importanceSampleGGX( Xi, intersection.material.roughness * texture2D( texture03, intersection.uv ).r, intersection.normal );
+			vec3 H = importanceSampleGGX( Xi, roughness, intersection.normal );
 
 			vec3 rayDirection = ray.direction;
 			bool isIncoming = dot( rayDirection, intersection.normal ) < 0.0;
@@ -647,7 +669,8 @@ void main( void ) {
 	vec3 color = vec3( 1.0 );
 	for ( int bounce = 0; bounce <= BOUNCE_LIMIT; bounce++ ) {
 		calcRadiance( intersection, ray, bounce );
-		color *= intersection.material.emission * texture2D( texture04, intersection.uv ).rgb + intersection.material.color;
+		color *= 	intersection.material.emission * fetchTextureMaterial( intersection.material.emissionTexture, intersection.uv ) + 
+					intersection.material.color    * fetchTextureMaterial( intersection.material.colorTexture, intersection.uv );
 		if ( !intersection.hit ) break;
 
 		// 光源に到達しないケースなら明るさは0
@@ -682,6 +705,17 @@ void main(void) {
 <script src="js/libs/stats.min.js"></script>
 <script src="js/libs/dat.gui.min.js"></script>
 
+<script>
+var textureChoices = {
+	none: 0,
+	checkered: 1,
+	earth: 2,
+	earth_inverse: 3,
+	earth_color: 4,
+	gam0022: 5,
+	gam0022_inverse: 6,
+};
+</script>
 <script src="js/pathtracing/sceneEditor.js"></script>
 <script>
 var container, stats;
@@ -700,7 +734,7 @@ var config = {
 	resolution: '512',
 
 	// Scene Edit
-	envmap: 'pisa',
+	envmap: 'bridge',
 	transformMode: function() {
 		editor.toggleTransformMode();
 	},
@@ -715,8 +749,11 @@ var config = {
 	objectType: "sphere",
 	materialType: "MATERIAL_TYPE_DIFFUSE",
 	materialColor: "#ffffff",
+	materialColorTexture: 0,
 	materialEmission: "#000000",
+	materialEmissionTexture: 0,
 	materialRoughness: 0.2,
+	materialRoughnessTexture: 0,
 	materialRefractiveIndex: 1.6,
 
 	fitToGround: function() {
@@ -798,10 +835,13 @@ function createDynamicObjects() {
 			frame: { type: 'i', value: frame },
 			buffer: { type: 't', value: readBuffer.texture },
 			cubeMap: { type: 'tc', value: textureCubes[config.envmap] },
-			texture01: { type: 't', value: texture2Ds.gam0022 },
-			texture02: { type: 't', value: texture2Ds.gam0022_inverse },
-			texture03: { type: 't', value: texture2Ds.earth },
-			texture04: { type: 't', value: texture2Ds.earth_inverse },
+
+			texture01: { type: 't', value: texture2Ds.checkered },
+			texture02: { type: 't', value: texture2Ds.earth },
+			texture03: { type: 't', value: texture2Ds.earth_inverse },
+			texture04: { type: 't', value: texture2Ds.earth_color },
+			texture05: { type: 't', value: texture2Ds.gam0022 },
+			texture06: { type: 't', value: texture2Ds.gam0022_inverse },
 
 			cameraWorldMatrix: { type: 'm4', value: camera.matrixWorld },
 			cameraProjectionMatrixInverse: { type: 'm4', value: new THREE.Matrix4().getInverse( camera.projectionMatrix ) },
@@ -854,10 +894,12 @@ function initTexture2D() {
 		return texture;
 	}
 
-	texture2Ds.gam0022         = createRepeatTexture( "textures/gam0022_512.png" );
-	texture2Ds.gam0022_inverse = createRepeatTexture( "textures/gam0022_inverse_512.png" );
+	texture2Ds.checkered       = createRepeatTexture( "textures/checkered_512.jpg" );
 	texture2Ds.earth           = createRepeatTexture( "textures/earth_2048.jpg" );
 	texture2Ds.earth_inverse   = createRepeatTexture( "textures/earth_inverse_2048.jpg" );
+	texture2Ds.earth_color     = createRepeatTexture( "textures/earth_color_2048.jpg" );
+	texture2Ds.gam0022         = createRepeatTexture( "textures/gam0022_512.png" );
+	texture2Ds.gam0022_inverse = createRepeatTexture( "textures/gam0022_inverse_512.png" );
 }
 
 function initGUI() {
@@ -879,6 +921,7 @@ function initGUI() {
 	sceneEditFolder.open();
 
 	// Selected Object
+
 	var selectedObjectFolder = gui.addFolder( "Selected Object" );
 	selectedObjectFolder.add( config, 'objectType', {
 		sphere: "sphere",
@@ -900,17 +943,24 @@ function initGUI() {
 	selectedObjectFolder.addColor( config, 'materialColor', 0.0, 1.0 ).name( 'Color' ).onChange( function( value ) {
 		editor.updateSelectedObject( value, "material", "color" );
 	} ).listen();
-
 	selectedObjectFolder.addColor( config, 'materialEmission', 0.0, 1.0 ).name( 'Emission' ).onChange( function( value ) {
 		editor.updateSelectedObject( value, "material", "emission" );
 	} ).listen();
-
 	selectedObjectFolder.add( config, 'materialRoughness', 0.0, 1.0 ).name( 'Roughness' ).onChange( function( value ) {
 		editor.updateSelectedObject( value, "material", "roughness" );
 	} ).listen();
-
 	selectedObjectFolder.add( config, 'materialRefractiveIndex', 0.0, 2.0 ).name( 'Refractive Index' ).onChange( function( value ) {
 		editor.updateSelectedObject( value, "material", "refractiveIndex" );
+	} ).listen();
+
+	selectedObjectFolder.add( config, 'materialColorTexture', textureChoices ).name( 'Color Texture' ).onChange( function( value ) {
+		editor.updateSelectedObject( value, "material", "colorTexture" );
+	} ).listen();
+	selectedObjectFolder.add( config, 'materialEmissionTexture', textureChoices ).name( 'Emission Texture' ).onChange( function( value ) {
+		editor.updateSelectedObject( value, "material", "emissionTexture" );
+	} ).listen();
+	selectedObjectFolder.add( config, 'materialRoughnessTexture', textureChoices ).name( 'Roughness Texture' ).onChange( function( value ) {
+		editor.updateSelectedObject( value, "material", "roughnessTexture" );
 	} ).listen();
 
 	selectedObjectFolder.add( config, "fitToGround" ).name( "Fit To Ground" );
