--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -586,6 +586,8 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 	intersection.hit = false;
 	intersection.distance = INF;
 	intersection.material.colorTexture = 0;
+	intersection.material.emissionTexture = 0;
+	intersection.material.roughnessTexture = 0;
 	intersectScene( intersection, ray );
 
 	vec3 seed = vec3( gl_FragCoord.xy, float( frame ) * 0.3 ) + float( bounce ) * 500.0 + 50.0;
