--- a/pathtracing_sandbox.html
+++ b/pathtracing_sandbox.html
@@ -587,6 +587,10 @@ void intersectScene( inout Intersection intersection, inout Ray ray ) {
 </script>
 
 <script id="float_fragment_shader_p2" type="x-shader/x-fragment">
+vec3 GammaToLinear( in vec3 value, in float gammaFactor ) {
+	return pow( value, vec3( gammaFactor ) );
+}
+
 void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) {
 	intersection.hit = false;
 	intersection.distance = INF;
@@ -655,7 +659,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 			}
 		}
 	} else {
-		intersection.material.color = textureCube( cubeMap, ray.direction ).rgb;//backgroundColor;
+		intersection.material.color = GammaToLinear( textureCube( cubeMap, ray.direction ).rgb, 2.2 );
 		intersection.material.emission = vec3( 0.0 );
 	}
 }
@@ -701,11 +705,16 @@ uniform int frame;
 uniform vec2 resolution;
 uniform sampler2D buffer;
 
+vec3 LinearToGamma( in vec3 value, in float gammaFactor ) {
+	return pow( value, vec3( 1.0 / gammaFactor ) );
+}
+
 void main(void) {
 	vec2 uv = gl_FragCoord.xy / resolution.xy;
-	vec4 color = texture2D( buffer, uv );
-	gl_FragColor = vec4( color.rgb / float( frame + 1 ), 1.0 );
-	//gl_FragColor = vec4( color.rgb, 1.0 );
+	vec4 sumColor = texture2D( buffer, uv );
+	vec3 linearColor = sumColor.rgb / float( frame + 1 );
+	vec3 gammaColor = LinearToGamma( linearColor, 2.2 );
+	gl_FragColor = vec4( gammaColor, 1.0 );
 }
 </script>
 
