--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -85,8 +85,9 @@ struct Ray {
 	vec3 direction;
 };
 
-#define CIRCUIT_MATERIAL 0
-#define MIRROR_MATERIAL  1
+#define TEST_MATERIAL 0
+#define CIRCUIT_MATERIAL 1
+#define MIRROR_MATERIAL  2
 
 //
 // Primitive
@@ -109,6 +110,20 @@ vec3 opRep( vec3 p, float interval ) {
 	return mod( p, interval ) - 0.5 * interval;
 }
 
+// https://www.shadertoy.com/view/Mlf3Wj
+mat2 rotate(in float a) {
+    float s=sin(a),c=cos(a);
+    return mat2(c,s,-s,c);
+}
+
+vec2 fold(in vec2 p, in float s) {
+    float a = PI / s - atan(p.x, p.y);
+    float n = PI2 / s;
+    a = floor(a / n) * n;
+    p *= rotate(a);
+    return p;
+}
+
 // thanks to https://www.shadertoy.com/view/MdVGRc
 float dMbox( vec3 p ) {
   const float scale = 2.7;
@@ -126,15 +141,19 @@ float dMbox( vec3 p ) {
   return length( q.xyz ) / abs( q.w );
 }
 
+float sdBox( vec3 p, vec3 b ) {
+  vec3 d = abs(p) - b;
+  return min(max(d.x,max(d.y,d.z)),0.0) + length(max(d,0.0));
+}
+
 float dSphere( vec3 p, vec3 c, float r ) {
 	return length( p - c ) - r;
 }
 
 float dScene( vec3 p ) {
-	return min(
-		dSphere( p, sPos, sSize ),
-		dMbox( opRep( p, 7.0 ) )
-	);
+	p.xz = fold( p.xz, 6.0 );
+	p.z -= 2.0;
+	return sdBox( p, vec3( 0.2, 2.0, 0.2 ) );
 }
 
 
@@ -195,6 +214,8 @@ vec3 calcNormal( vec3 p ) {
 }
 
 int calcMaterial( vec3 p ) {
+	return TEST_MATERIAL;
+
 	if ( abs( dSphere( p, sPos, sSize ) ) < EPS ) {
 		return  MIRROR_MATERIAL;
 	}
@@ -230,7 +251,7 @@ void intersectScene( inout Intersection intersection, inout Ray ray ) {
 	intersection.distance = 0.0;
 	vec3 p = ray.origin;
 
-	for ( int i = 0; i < 64; i++ ) {
+	for ( int i = 0; i < 256; i++ ) {
 		d = dScene( p );
 		intersection.distance += d;
 		p = ray.origin + intersection.distance * ray.direction;
@@ -255,7 +276,9 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 		float specular = pow( clamp( dot( reflect( lightDir, intersection.normal ), ray.direction ), 0.0, 1.0 ), 10.0 );
 		//float shadow = getShadow( p + intersection.normal * OFFSET, lightDir );
 
-		if ( intersection.material == CIRCUIT_MATERIAL ) {
+		if ( intersection.material == TEST_MATERIAL ) {
+			intersection.color = vec3( 0.1 ) + diffuse + specular;
+		} else if ( intersection.material == CIRCUIT_MATERIAL ) {
 			vec2 uv = intersection.position.yz;
 			vec2 dg = circuitPattern( uv );
 			float glow = max( sin( length( intersection.position ) - 1.8 * time ) * 2.5, 0.0 );
@@ -268,7 +291,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 		intersection.color = vec3(0.1);
 	}
 
-	intersection.color += clamp( sin( time * 0.2 - 0.5 * PI ) * 0.2 * intersection.distance - 0.005 * float( intersection.count ), -1.0, 1.0 );
+	//intersection.color += clamp( sin( time * 0.2 - 0.5 * PI ) * 0.2 * intersection.distance - 0.005 * float( intersection.count ), -1.0, 1.0 );
 }
 
 
@@ -287,8 +310,12 @@ void main(void) {
 		cDir  = normalize( vec3( sin( time * 0.5 ), sin( time * 0.1 ), cos( time * 0.6 ) + 0.5 ) );
 	}
 
+	cPos = vec3( 0.0, 0.5, -5.0 );
+	cDir = vec3( 0.0, 0.0, 1.0 );
+
 	float targetDepth = 1.3;
-	vec3 cSide = normalize( cross( cDir, vec3( 1.0, 1.0 ,0.0 ) ) );
+	vec3 up =  vec3( 0.0, 1.0 ,0.0 );
+	vec3 cSide = normalize( cross( cDir, up ) );
 	vec3 cUp   = normalize( cross( cSide, cDir ) );
 	ray.origin = cPos;
 	ray.direction = normalize( cSide * fragPos.x + cUp * fragPos.y + cDir * targetDepth );
@@ -319,7 +346,7 @@ void main(void) {
 		ray.direction = normalize( reflect( ray.direction, intersection.normal ) );
 	}
 
-	color += 0.2 * tempo;
+	//color += 0.2 * tempo;
 
 	gl_FragColor = vec4( color, 1.0 );
 
