--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -150,10 +150,18 @@ float dSphere( vec3 p, vec3 c, float r ) {
 	return length( p - c ) - r;
 }
 
+float dWing( vec3 p ) {
+	float a = 0.1 + 0.1 * sin( time );
+	float d1 = sdBox( p, vec3( 0.1 + a, 2.0, 0.2 + a ) );
+	float d2 = sdBox( p, vec3( 0.3, 3.0, 0.01 + a ) );
+	float d3 = dSphere( opRep( p, 0.5 ), vec3( 0.0 ), 0.25 );
+	return max( min( d1, d2 ), -d3 );
+}
+
 float dScene( vec3 p ) {
 	p.xz = fold( p.xz, 6.0 );
-	p.z -= 2.0;
-	return sdBox( p, vec3( 0.2, 2.0, 0.2 ) );
+	p.z -= 1.0;
+	return dWing( p );
 }
 
 
@@ -277,7 +285,7 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 		//float shadow = getShadow( p + intersection.normal * OFFSET, lightDir );
 
 		if ( intersection.material == TEST_MATERIAL ) {
-			intersection.color = vec3( 0.1 ) + diffuse + specular;
+			intersection.color = vec3( 0.2 ) + 0.2 * diffuse + specular - 0.01 * float( intersection.count );
 		} else if ( intersection.material == CIRCUIT_MATERIAL ) {
 			vec2 uv = intersection.position.yz;
 			vec2 dg = circuitPattern( uv );
@@ -308,10 +316,10 @@ void main(void) {
 	} else {
 		cPos  = vec3( -0.8185093402862549, 4.509979248046875, time );
 		cDir  = normalize( vec3( sin( time * 0.5 ), sin( time * 0.1 ), cos( time * 0.6 ) + 0.5 ) );
-	}
 
-	cPos = vec3( 0.0, 0.5, -5.0 );
-	cDir = vec3( 0.0, 0.0, 1.0 );
+		cPos = vec3( 0.0, 0.5, -5.0 );
+		cDir = vec3( 0.0, 0.0, 1.0 );
+	}
 
 	float targetDepth = 1.3;
 	vec3 up =  vec3( 0.0, 1.0 ,0.0 );
@@ -403,6 +411,7 @@ void main(void) {
 				camera = new THREE.PerspectiveCamera(35, 800/600);
 				dummyCamera = new THREE.Camera();
 				camera.lookAt( new THREE.Vector3( 0.0, 0.0, 0.0 ) );
+				camera.position.z = -2;
 
 				geometry = new THREE.PlaneBufferGeometry( 2.0, 2.0 );
 				material = new THREE.RawShaderMaterial( {
@@ -437,19 +446,19 @@ void main(void) {
 
 				orbitControls = new THREE.OrbitControls( camera, canvas );
 				orbitControls.enablePan = true;
-				orbitControls.keyPanSpeed = 0.01;
+				//orbitControls.keyPanSpeed = 0.01;
 				orbitControls.enableDamping = false;
-				orbitControls.dampingFactor = 0.015;
+				//orbitControls.dampingFactor = 0.015;
 				orbitControls.enableZoom = true;
-				orbitControls.zoomSpeed = 0.001;
-				orbitControls.rotateSpeed = 0.8;
+				//orbitControls.zoomSpeed = 0.001;
+				//orbitControls.rotateSpeed = 0.8;
 				orbitControls.autoRotate = false;
 				orbitControls.autoRotateSpeed = 0.0;
 				orbitControls.target = new THREE.Vector3( 0.0, 0.0, 0.0 );
 
 				var gui = new dat.GUI();
 				gui.add( config, 'saveImage' ).name( 'Save Image' );
-				gui.add( config, 'camera', [ 'GLSL', 'Orbit', 'Fly' ] ).name( 'Camera' );
+				gui.add( config, 'camera', [ 'GLSL', 'Orbit', /*'Fly'*/ ] ).name( 'Camera' );
 				gui.add( config, 'resolution', [ '256', '512', '800', 'full' ] ).name( 'Resolution' ).onChange( function( value ) {
 
 					if ( value !== 'full' ) {
@@ -483,12 +492,12 @@ void main(void) {
 
 				} else {
 
-					camera.position.set( mouse.x - 0.5, mouse.y * 4, timestamp );
-					camera.lookAt( new THREE.Vector3( 0.0, -0.3, 1.0 ).add( camera.position ) );
+					//camera.position.set( mouse.x - 0.5, mouse.y * 4, timestamp );
+					//camera.lookAt( new THREE.Vector3( 0.0, -0.3, 1.0 ).add( camera.position ) );
 
 				}
 
-				if ( camera.position.y < 0 ) camera.position.y = 0;
+				//if ( camera.position.y < 0 ) camera.position.y = 0;
 
 				material.uniforms.resolution.value = new THREE.Vector2( canvas.width, canvas.height );
 				material.uniforms.mouse.value = mouse;
@@ -508,10 +517,10 @@ void main(void) {
 				var pos = camera.getWorldPosition();
 				var dir = camera.getWorldDirection();
 
-				//document.getElementById( 'info' ).innerHTML = ""
-				//	+ pos.x + ", " + pos.y + ", " + pos.z + "<br />"
-				//	+ dir.x + ", " + dir.y + ", " + dir.z + "<br />"
-				//	+ timestamp * 0.001;
+				document.getElementById( 'info' ).innerHTML = ""
+					+ pos.x + ", " + pos.y + ", " + pos.z + "<br />"
+					+ dir.x + ", " + dir.y + ", " + dir.z + "<br />"
+					+ timestamp * 0.001;
 
 			}
 
