--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -110,6 +110,14 @@ vec3 opRep( vec3 p, float interval ) {
 	return mod( p, interval ) - 0.5 * interval;
 }
 
+vec2 opRep( vec2 p, float interval ) {
+	return mod( p, interval ) - 0.5 * interval;
+}
+
+float opRep( float p, float interval ) {
+	return mod( p, interval ) - 0.5 * interval;
+}
+
 // https://www.shadertoy.com/view/Mlf3Wj
 mat2 rotate(in float a) {
     float s=sin(a),c=cos(a);
@@ -150,18 +158,34 @@ float dSphere( vec3 p, vec3 c, float r ) {
 	return length( p - c ) - r;
 }
 
+float dBar(vec2 p, float interval, float width) {
+	return length( max( abs( opRep( p, interval ) ) - width, 0.0 ) );
+}
+
 float dWing( vec3 p ) {
 	float a = 0.1 + 0.1 * tempo;
-	float d1 = sdBox( p, vec3( 0.1 + a, 2.0, 0.2 + a ) );
-	float d2 = sdBox( p, vec3( 0.3, 3.0, 0.01 + a ) );
-	float d3 = dSphere( opRep( p, 0.5 ), vec3( 0.0 ), 0.25 );
-	return max( min( d1, d2 ), -d3 );
+
+	vec3 p1 = p;
+	p1.xz = opRep( p.xz, 1.0 );
+
+	vec3 p2 = p;
+	p2 = opRep( p, 0.5 );
+
+	float d1 = sdBox( p1, vec3( 0.1 + a * 3.0, 2.0 - a, 0.2 + a ) );
+	float d2 = sdBox( p1, vec3( 0.3 - a, 3.0 + a, 0.1 + a ) );
+	float d3 = dSphere( opRep( p, 1.0 ), vec3( 0.0 ), 0.1 );
+	float d4 = sdBox( p2, vec3( 0.05 + a ) );
+	return max( max( min( d1, d2 ), -d4 ), -d3 );
+}
+
+float dPoll( vec3 p ) {
+	p.xz = fold( p.xz, 6.0 );
+	p.z -= 0.5;
+	return dWing( p );
 }
 
 float dScene( vec3 p ) {
-	p.xz = fold( p.xz, 6.0 );
-	p.z -= 1.0;
-	return dWing( p );
+	return dPoll( p );
 }
 
 
@@ -399,7 +423,7 @@ void main(void) {
 					window.open( canvas.toDataURL() );
 
 				},
-				camera: 'GLSL',
+				camera: 'Orbit',
 				resolution: '512',
 			};
 
