--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -163,7 +163,7 @@ float dBar(vec2 p, float interval, float width) {
 }
 
 float dWing( vec3 p ) {
-	float a = 0.1 + 0.1 * tempo;
+	float a = 0.07 + 0.07 * tempo;
 
 	vec3 p1 = p;
 	p1.xz = opRep( p.xz, 1.0 );
@@ -172,10 +172,10 @@ float dWing( vec3 p ) {
 	p2 = opRep( p, 0.5 );
 
 	float d1 = sdBox( p1, vec3( 0.1 + a * 3.0, 2.0 - a, 0.2 + a ) );
-	float d2 = sdBox( p1, vec3( 0.3 - a, 3.0 + a, 0.1 + a ) );
-	float d3 = dSphere( opRep( p, 1.0 ), vec3( 0.0 ), 0.1 );
+	float d2 = sdBox( p1, vec3( 0.3 - a, 3.0 - 4.0 * a, 0.1 + a ) );
+	float d3 = sdBox( p1, vec3( 0.2 - a, 4.0 - 4.0 * a, a ) );
 	float d4 = sdBox( p2, vec3( 0.05 + a ) );
-	return max( max( min( d1, d2 ), -d4 ), -d3 );
+	return max( max( min( d1, d2 ), -d3), -d4 );
 }
 
 float dPoll( vec3 p ) {
@@ -353,8 +353,8 @@ void main(void) {
 	ray.direction = normalize( cSide * fragPos.x + cUp * fragPos.y + cDir * targetDepth );
 
 	// music's tempo
-	tempo = sin( 4.0 * PI * time ) + sin( 3.0 * PI * time ) + sin( 2.0 * PI * time ) + sin( PI * time );
-	tempo /= 4.0;
+	tempo = sin( PI * time );// + sin( 3.0 * PI * time ) + sin( 2.0 * PI * time ) + sin( PI * time );
+	//tempo /= 4.0;
 
 	// sphere pos
 	float d = 0.2 + 0.1 * cos( time * 0.5 );
