--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -88,10 +88,35 @@ struct Ray {
 #define TEST_MATERIAL 0
 #define CIRCUIT_MATERIAL 1
 #define MIRROR_MATERIAL  2
+#define SKY_MATERIAL 4
 
-//
-// Primitive
-//
+
+// util
+float hash(vec2 p) { return fract(1e4 * sin(17.0 * p.x + p.y * 0.1) * (0.1 + abs(sin(p.y * 13.0 + p.x)))); }
+
+float noise(vec2 x) {
+	vec2 i = floor(x), f = fract(x);
+
+	float a = hash(i);
+	float b = hash(i + vec2(1.0, 0.0));
+	float c = hash(i + vec2(0.0, 1.0));
+	float d = hash(i + vec2(1.0, 1.0));
+
+	vec2 u = f * f * (3.0 - 2.0 * f);
+	return mix(a, b, u.x) + (c - a) * u.y * (1.0 - u.x) + (d - b) * u.x * u.y;
+}
+
+float fbm(vec2 p) {
+	const mat2 m2 = mat2(0.8, -0.6, 0.6, 0.8);
+
+	float f = 0.5000 * noise(p); p = m2 * p * 2.02;
+	f += 0.2500 * noise(p); p = m2 * p * 2.03;
+	f += 0.1250 * noise(p); p = m2 * p * 2.01;
+	f += 0.0625 * noise(p);
+	return f / 0.9375;
+}
+
+// intersection
 struct Intersection {
 	bool hit;
 	vec3 position;
@@ -162,8 +187,15 @@ float dBar( vec2 p, float interval, float width) {
 	return length( max( abs( opRep( p, interval ) ) - width, 0.0 ) );
 }
 
+float squareDistance( vec2 p ) {
+	return p.x * p.x + p.y * p.y;
+}
+
 float dWing( in vec3 p ) {
 	float a = 0.07 + 0.07 * tempo;
+
+	float b = 0.01 * min( time, 10.0 ) * min( squareDistance( p.xz ), 15.0 );
+	p.y += b + 10.0;
 
 	vec3 p1 = p;
 	p1.xz = opRep( p.xz, 1.0 );
@@ -171,9 +203,9 @@ float dWing( in vec3 p ) {
 	vec3 p2 = p;
 	p2 = opRep( p, 0.5 );
 
-	float d1 = sdBox( p1, vec3( 0.1 + a * 3.0, 2.0 - a, 0.2 + a ) );
-	float d2 = sdBox( p1, vec3( 0.3 - a, 3.0 - 4.0 * a, 0.1 + a ) );
-	float d3 = sdBox( p1, vec3( 0.2 - a, 4.0 - 4.0 * a, a ) );
+	float d1 = sdBox( p1, vec3( 0.1 + a * 3.0, 12.0 - a,       0.2 + a ) );
+	float d2 = sdBox( p1, vec3( 0.3 - a,       13.0 - 4.0 * a, 0.1 + a ) );
+	float d3 = sdBox( p1, vec3( 0.2 - a,       14.0 - 4.0 * a, a ) );
 	float d4 = sdBox( p2, vec3( 0.05 + a ) );
 	return max( max( min( d1, d2 ), -d3), -d4 );
 }
@@ -191,7 +223,7 @@ float dPoll( inout vec3 p ) {
 	float t1 = floor( t );
 	float t2 = t1 + easeInOutCubic( t - t1 );
 
-	p.xz = fold( p.xz, t2 );
+	p.xz = fold( p.xz, min( t2, 10.0 ) );
 	p.z -= 0.5;
 
 	if ( 10.0 <= time && time < 20.0 ) {
@@ -331,17 +363,18 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 			float glow = max( sin( length( uv ) - 1.8 * time ) * 2.5, 0.0 );
 			float pattern = max( dg.x - 1.0, 0.0 );
 			intersection.color = vec3( 0.2 ) + 0.2 * diffuse + specular + illuminationColor * pattern * 0.0 - 0.01 * float( intersection.count );
-		} else if ( intersection.material == CIRCUIT_MATERIAL ) {
-			vec2 uv = intersection.position.yz;
-			vec2 dg = circuitPattern( uv );
-			float glow = max( sin( length( intersection.position ) - 1.8 * time ) * 2.5, 0.0 );
-			float pattern = max( dg.x - 1.0, 0.0 );
-			intersection.color = vec3( 0.2, 0.2, 0.2 ) + illuminationColor * pattern * glow * diffuse + specular /* * max( 0.5, shadow )*/;
-		} else if ( intersection.material == MIRROR_MATERIAL ) {
-			intersection.color = ( vec3( 1.0 ) - illuminationColor ) * diffuse * 0.5 + specular/* * max( 0.5, shadow )*/;
 		}
 	} else {
-		intersection.color = vec3(0.1);
+		vec3 col = vec3(0.3, 0.55, 0.8) * (1.0 - 0.8 * ray.direction.y) * 0.9;
+
+		// Sun
+		float sundot = clamp(dot(ray.direction, lightDir), 0.0, 1.0);
+		col += 0.25 * vec3(1.0, 0.7, 0.4) * pow(sundot, 8.0);
+		col += 0.75 * vec3(1.0, 0.8, 0.5) * pow(sundot, 64.0);
+
+		// Clouds
+		intersection.color = mix(col, vec3(1.0, 0.95, 1.0), 0.5 *
+			smoothstep(0.5, 0.8, fbm((ray.origin.xz + ray.direction.xz * (250000.0 - ray.origin.y) / ray.direction.y) * 0.000008)));
 	}
 
 	//intersection.color += clamp( sin( time * 0.2 - 0.5 * PI ) * 0.2 * intersection.distance - 0.005 * float( intersection.count ), -1.0, 1.0 );
