--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -85,7 +85,7 @@ struct Ray {
 	vec3 direction;
 };
 
-#define TEST_MATERIAL 0
+#define METAL_MATERIAL 0
 #define CIRCUIT_MATERIAL 1
 #define MIRROR_MATERIAL  2
 #define SKY_MATERIAL 4
@@ -300,7 +300,7 @@ void setMaterialAndUv( inout Intersection intersection, vec3 p ) {
 	else {
 	}
 
-	intersection.material = TEST_MATERIAL;
+	intersection.material = METAL_MATERIAL;
 	intersection.uv = p.xz;
 }
 
@@ -356,13 +356,13 @@ void calcRadiance( inout Intersection intersection, inout Ray ray, int bounce ) 
 		float specular = pow( clamp( dot( reflect( lightDir, intersection.normal ), ray.direction ), 0.0, 1.0 ), 10.0 );
 		//float shadow = getShadow( p + intersection.normal * OFFSET, lightDir );
 
-		if ( intersection.material == TEST_MATERIAL ) {
+		if ( intersection.material == METAL_MATERIAL ) {
 			//intersection.color = vec3( 0.2 ) + 0.2 * diffuse + specular - 0.01 * float( intersection.count );
-			vec2 uv = intersection.uv;
-			vec2 dg = circuitPattern( uv );
-			float glow = max( sin( length( uv ) - 1.8 * time ) * 2.5, 0.0 );
-			float pattern = max( dg.x - 1.0, 0.0 );
-			intersection.color = vec3( 0.2 ) + 0.2 * diffuse + specular + illuminationColor * pattern * 0.0 - 0.01 * float( intersection.count );
+			//vec2 uv = intersection.uv;
+			//vec2 dg = circuitPattern( uv );
+			//float glow = max( sin( length( uv ) - 1.8 * time ) * 2.5, 0.0 );
+			//float pattern = max( dg.x - 1.0, 0.0 );
+			intersection.color = vec3( 0.2 ) + 0.2 * diffuse + specular - 0.01 * float( intersection.count );
 		}
 	} else {
 		vec3 col = vec3(0.3, 0.55, 0.8) * (1.0 - 0.8 * ray.direction.y) * 0.9;
@@ -422,11 +422,11 @@ void main(void) {
 	float alpha = 1.0;
 	Intersection intersection;
 
-	for ( int bounce = 0; bounce <= 1; bounce++ ) {
+	for ( int bounce = 0; bounce <= 2; bounce++ ) {
 		calcRadiance( intersection, ray, bounce );
 
 		color += alpha * intersection.color;
-		if ( !intersection.hit || intersection.material != MIRROR_MATERIAL ) break;
+		if ( !intersection.hit || intersection.material != METAL_MATERIAL ) break;
 
 		alpha *= 0.7;
 		ray.origin = intersection.position + intersection.normal * OFFSET;
