--- a/raymarching_tdf2017.html
+++ b/raymarching_tdf2017.html
@@ -157,6 +157,11 @@ vec2 fold(in vec2 p, in float s) {
     return p;
 }
 
+float smoothMin(float d1, float d2, float k){
+	float h = exp(-k * d1) + exp(-k * d2);
+	return -log(h) / k;
+}
+
 // thanks to https://www.shadertoy.com/view/MdVGRc
 float dMbox( vec3 p ) {
   const float scale = 2.7;
@@ -191,11 +196,16 @@ float squareDistance( vec2 p ) {
 	return p.x * p.x + p.y * p.y;
 }
 
+float gauss(float x) {
+	float a = 50.0;
+	return exp(-x * x / a);
+}
+
 float dWing( in vec3 p ) {
 	float a = 0.07 + 0.07 * tempo;
 
-	float b = 0.01 * min( time, 10.0 ) * min( squareDistance( p.xz ), 15.0 );
-	p.y += b + 10.0;
+	float b = min(time, 5.0) * gauss(length(p.xz));
+	p.y += -b + 10.0;
 
 	vec3 p1 = p;
 	p1.xz = opRep( p.xz, 1.0 );
